Fix sidebar middle part overflowing

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -6,3 +6,11 @@
 	--color-outline: #ccc;
 	--color-hover: #eee;
 }
+
+.nobar {
+	-ms-overflow-style: none; /* Internet Explorer 10+ */
+	scrollbar-width: none; /* Firefox, Safari 18.2+, Chromium 121+ */
+}
+.nobar::-webkit-scrollbar {
+	display: none; /* Older Safari and Chromium */
+}
